--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1185,6 +1185,7 @@ releasable_branches: &releasable_branches
       - ui-components/main
       - 1.0-stable
       - geo/main
+      - fix-ds-ssr-context
 
 test_browsers: &test_browsers
   browser: [chrome, firefox]
